<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "@string/name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/businessNumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/business_number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />


    <Spinner
        android:id="@+id/primaryBusiness_spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:content="@array/primaryBusiness_list"
        android:prompt="@string/primaryBusiness_prompt"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/primaryBusiness_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/province_spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:content="@array/province_list"
        android:prompt="@string/province_prompt"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_business"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/province_spinner"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="submitInfoButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
