<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:id="@+id/det_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/det_businessNumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Business Number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/det_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <Spinner
        android:id="@+id/det_primaryBusiness_spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:content="@array/primaryBusiness_list"
        android:prompt="@string/primaryBusiness_prompt"
        app:layout_constraintTop_toBottomOf="@+id/det_businessNumber"
        android:layout_marginStart="8dp"/>
    <EditText
        android:id="@+id/det_address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Address"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/det_primaryBusiness_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/det_province_spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:content="@array/province_list"
        android:prompt="@string/province_prompt"
        app:layout_constraintTop_toBottomOf="@+id/det_address"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Update Data"
        app:layout_constraintTop_toBottomOf="@+id/det_province_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Contact"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/det_province_spinner"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:onClick="eraseContact"/>



</android.support.constraint.ConstraintLayout>
