<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business_number">Business Number</string>
    <string name="create_business">Create Business</string>
    <string name="name_hint">Name</string>

    <string name="primaryBusiness_prompt">Select Primary Business</string>
    <string-array name="primaryBusiness_list">
        <item>Select Primary business…</item>
        <item>Fisher</item>
        <item>Distributor</item>
        <item>Fish Monger</item>
        <item>Processor</item>
    </string-array>

    <string name="province_prompt">Select Province or Territory</string>
    <string name="address_hint">Address</string>
    <string-array name="province_list">
        <item>Select Province…</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>
</resources>
